# Connect4

./: CMakeLists.txt  README.md  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub  setup_and_build.sh
inc/: ComputerPlayer.h  DiagonalWinStrategy.h  EndGame.h  GameBoard.h  GameScreen.h  HorizontalWinStrategy.h  HumanPlayer.h  MainWindow.h  Player.h  PlayerSetup.h  VerticalWinStrategy.h  WinConditionStrategy.h
src/: ComputerPlayer.cpp  DiagonalWinStrategy.cpp  EndGame.cpp  GameBoard.cpp  GameScreen.cpp  HorizontalWinStrategy.cpp  HumanPlayer.cpp  MainWindow.cpp  PlayerSetup.cpp  VerticalWinStrategy.cpp  main.cpp
tests/: GameBoardTest.cpp  PlayerTest.cpp
ui/: EndGame.ui  GameScreen.ui  MainWindow.ui  PlayerSetup.ui
